[gd_scene load_steps=92 format=3 uid="uid://dk3kgrxsyroei"]

[ext_resource type="Script" uid="uid://dsxxguqj2icnr" path="res://scenes/characters/bosses/monstequare/monstequare_cutscene.gd" id="1_1i01l"]
[ext_resource type="Shader" uid="uid://cr6tg8gqxmuno" path="res://scenes/characters/enemy/flash_damagae.gdshader" id="1_doxw5"]
[ext_resource type="Texture2D" uid="uid://x1gkxuqinujc" path="res://sprites/characters/bosses/monstequare/monstequare_damage0001.png" id="2_8pbfb"]
[ext_resource type="Texture2D" uid="uid://dnlwp5qt6iorw" path="res://sprites/characters/bosses/monstequare/monstequare_damage0002.png" id="3_wh2ps"]
[ext_resource type="Texture2D" uid="uid://be0so77n8n27t" path="res://sprites/characters/bosses/monstequare/monstequare_damage0003.png" id="4_5168v"]
[ext_resource type="Texture2D" uid="uid://dwosyf3ahwsf3" path="res://sprites/characters/bosses/monstequare/monstequare_damage0004.png" id="5_4p4i1"]
[ext_resource type="Texture2D" uid="uid://xx74xd67jclf" path="res://sprites/characters/bosses/monstequare/monstequare_damage0005.png" id="6_xj6r5"]
[ext_resource type="Texture2D" uid="uid://cr3ydwljmltxk" path="res://sprites/characters/bosses/monstequare/monstequare_damage0006.png" id="7_3rvpt"]
[ext_resource type="Texture2D" uid="uid://csf7jn6h8kn3t" path="res://sprites/characters/bosses/monstequare/monstequare_defeated0001.png" id="8_i5vbi"]
[ext_resource type="Texture2D" uid="uid://mqs6yffvc0pf" path="res://sprites/characters/bosses/monstequare/monstequare_defeated0002.png" id="9_sqgjl"]
[ext_resource type="Texture2D" uid="uid://b0mucnri52w00" path="res://sprites/characters/bosses/monstequare/monstequare_defeated0003.png" id="10_5ub5i"]
[ext_resource type="Texture2D" uid="uid://c3425nbfujcxl" path="res://sprites/characters/bosses/monstequare/monstequare_defeated0004.png" id="11_gi8tq"]
[ext_resource type="Texture2D" uid="uid://byk3s27gx4fy4" path="res://sprites/characters/bosses/monstequare/monstequare_defeated0005.png" id="12_ksqet"]
[ext_resource type="Texture2D" uid="uid://ddv4n6yc5x3j2" path="res://sprites/characters/bosses/monstequare/monstequare_defeated0006.png" id="13_d0oec"]
[ext_resource type="Texture2D" uid="uid://bdjrhcn7h7sxp" path="res://sprites/characters/bosses/monstequare/monstequare_idle0001.png" id="14_5k0kk"]
[ext_resource type="Texture2D" uid="uid://dqyo8d8deu0w8" path="res://sprites/characters/bosses/monstequare/monstequare_idle0002.png" id="15_j58g7"]
[ext_resource type="Texture2D" uid="uid://bo04tpq006c3w" path="res://sprites/characters/bosses/monstequare/monstequare_idle0003.png" id="16_4oxgr"]
[ext_resource type="Texture2D" uid="uid://6js7ufypaf27" path="res://sprites/characters/bosses/monstequare/monstequare_idle0004.png" id="17_53k2s"]
[ext_resource type="Texture2D" uid="uid://b4ipa54qvpsq3" path="res://sprites/characters/bosses/monstequare/monstequare_idle0005.png" id="18_4b3mp"]
[ext_resource type="Texture2D" uid="uid://bf21lfdj1q0x4" path="res://sprites/characters/bosses/monstequare/monstequare_idle0006.png" id="19_b3tnw"]
[ext_resource type="Texture2D" uid="uid://dlowceuknyjju" path="res://sprites/characters/bosses/monstequare/monstequare_intro0012.png" id="22_ffycw"]
[ext_resource type="Texture2D" uid="uid://brywr6h2n1iq6" path="res://sprites/characters/bosses/monstequare/monstequare_intro0013.png" id="23_yargb"]
[ext_resource type="Texture2D" uid="uid://dlb3bvki23r8g" path="res://sprites/characters/bosses/monstequare/monstequare_intro0014.png" id="24_0223a"]
[ext_resource type="Texture2D" uid="uid://bm2dqdyhv4c8w" path="res://sprites/characters/bosses/monstequare/monstequare_intro0015.png" id="25_5waan"]
[ext_resource type="Texture2D" uid="uid://b7m7smv3d6ryh" path="res://sprites/characters/bosses/monstequare/monstequare_intro0016.png" id="26_ib8l1"]
[ext_resource type="Texture2D" uid="uid://bjb357qk7gwyk" path="res://sprites/characters/bosses/monstequare/monstequare_intro0017.png" id="27_e5mub"]
[ext_resource type="Texture2D" uid="uid://chqlnpbljowwl" path="res://sprites/characters/bosses/monstequare/monstequare_intro0018.png" id="28_fnpub"]
[ext_resource type="Texture2D" uid="uid://cdsbnveaylbd8" path="res://sprites/characters/bosses/monstequare/monstequare_intro0019.png" id="29_d4njs"]
[ext_resource type="Texture2D" uid="uid://c01tde7vn8hgj" path="res://sprites/characters/bosses/monstequare/monstequare_intro0020.png" id="30_t427i"]
[ext_resource type="Texture2D" uid="uid://1g3m6iempgni" path="res://sprites/characters/bosses/monstequare/monstequare_intro0021.png" id="31_lnob0"]
[ext_resource type="Texture2D" uid="uid://dbvveu4duseoh" path="res://sprites/characters/bosses/monstequare/monstequare_intro0022.png" id="32_hxlok"]
[ext_resource type="Texture2D" uid="uid://b33pu351xjv4p" path="res://sprites/characters/bosses/monstequare/monstequare_intro0023.png" id="33_lqudp"]
[ext_resource type="Texture2D" uid="uid://bnjo4clf3lspy" path="res://sprites/characters/bosses/monstequare/monstequare_intro0024.png" id="34_m4hr6"]
[ext_resource type="Texture2D" uid="uid://djdate71r2kam" path="res://sprites/characters/bosses/monstequare/monstequare_intro0001.png" id="35_sfkx2"]
[ext_resource type="Texture2D" uid="uid://da0uja041qvhq" path="res://sprites/characters/bosses/monstequare/monstequare_intro0002.png" id="36_608lq"]
[ext_resource type="Texture2D" uid="uid://bssjmj5s2vu36" path="res://sprites/characters/bosses/monstequare/monstequare_intro0003.png" id="37_32w0g"]
[ext_resource type="Texture2D" uid="uid://dd77ovd586hd" path="res://sprites/characters/bosses/monstequare/monstequare_intro0004.png" id="38_jdf2o"]
[ext_resource type="Texture2D" uid="uid://dsk7vasp8p6uy" path="res://sprites/characters/bosses/monstequare/monstequare_intro0005.png" id="39_3gy1j"]
[ext_resource type="Texture2D" uid="uid://drxodwjlvck2r" path="res://sprites/characters/bosses/monstequare/monstequare_intro0006.png" id="40_rnn4j"]
[ext_resource type="Texture2D" uid="uid://bamvrasbur201" path="res://sprites/characters/bosses/monstequare/monstequare_intro0007.png" id="41_heo7o"]
[ext_resource type="Texture2D" uid="uid://dxu82bafodm5p" path="res://sprites/characters/bosses/monstequare/monstequare_intro0008.png" id="42_1figf"]
[ext_resource type="Texture2D" uid="uid://di64u3mt1xm1b" path="res://sprites/characters/bosses/monstequare/monstequare_intro0009.png" id="43_d8dob"]
[ext_resource type="Texture2D" uid="uid://bg5pi72h64od6" path="res://sprites/characters/bosses/monstequare/monstequare_spit0001.png" id="44_q2f2c"]
[ext_resource type="Texture2D" uid="uid://dnbrm84ghyhjs" path="res://sprites/characters/bosses/monstequare/monstequare_spit0002.png" id="45_21vk7"]
[ext_resource type="Texture2D" uid="uid://4tlnyldccrjs" path="res://sprites/characters/bosses/monstequare/monstequare_spit0003.png" id="46_5j8qb"]
[ext_resource type="Texture2D" uid="uid://btrydf8vnm32r" path="res://sprites/characters/bosses/monstequare/monstequare_spit0004.png" id="47_440dt"]
[ext_resource type="Texture2D" uid="uid://bhkjvlps83lb4" path="res://sprites/characters/bosses/monstequare/monstequare_spit0005.png" id="48_xpx07"]
[ext_resource type="Texture2D" uid="uid://dhmyas6hdemgb" path="res://sprites/characters/bosses/monstequare/monstequare_spit0006.png" id="49_uk3qh"]
[ext_resource type="Texture2D" uid="uid://1yo6u6h3uwfi" path="res://sprites/characters/bosses/monstequare/monstequare_summon0001.png" id="50_bi6be"]
[ext_resource type="Texture2D" uid="uid://b44nn4oapfutp" path="res://sprites/characters/bosses/monstequare/monstequare_summon0002.png" id="51_y8jwi"]
[ext_resource type="Texture2D" uid="uid://c4s7llnuwfy6a" path="res://sprites/characters/bosses/monstequare/monstequare_summon0003.png" id="52_utlk8"]
[ext_resource type="Texture2D" uid="uid://gpdsqut3pmdp" path="res://sprites/characters/bosses/monstequare/monstequare_summon0004.png" id="53_do7h3"]
[ext_resource type="Texture2D" uid="uid://x4xsxtgbbe2" path="res://sprites/characters/bosses/monstequare/monstequare_summon0005.png" id="54_ujgaf"]
[ext_resource type="Texture2D" uid="uid://bqbmtejssl5ly" path="res://sprites/characters/bosses/monstequare/monstequare_summon0006.png" id="55_tpp7c"]
[ext_resource type="AudioStream" uid="uid://c7lrenmq3qii7" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_defeated01.ogg" id="56_wxjg3"]
[ext_resource type="AudioStream" uid="uid://bla4l0brwmccb" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_defeated02.ogg" id="57_65yxa"]
[ext_resource type="AudioStream" uid="uid://cfk787phk3kac" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_hurt01.ogg" id="58_uv7sg"]
[ext_resource type="AudioStream" uid="uid://bvekyq8omnebf" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_hurt02.ogg" id="59_isf41"]
[ext_resource type="AudioStream" uid="uid://bwq3bl6glyida" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_hurt03.ogg" id="60_n0opc"]
[ext_resource type="AudioStream" uid="uid://sitvwnumkiox" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_hurt04.ogg" id="61_qcdls"]
[ext_resource type="AudioStream" uid="uid://b66efa0q7k72j" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_inhale.ogg" id="62_adq7w"]
[ext_resource type="AudioStream" uid="uid://d2buxh1rujhp3" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_roar.ogg" id="63_sy4tm"]
[ext_resource type="AudioStream" uid="uid://cp0k3vpxq06l7" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_spit01.ogg" id="64_5wt8i"]
[ext_resource type="AudioStream" uid="uid://bjrvr5md0ivbf" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_spit02.ogg" id="65_breto"]
[ext_resource type="AudioStream" uid="uid://b7h4ubpd3r16s" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_spit03.ogg" id="66_0omcv"]
[ext_resource type="AudioStream" uid="uid://dhqkjoave8ssy" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_spit04.ogg" id="67_f86al"]
[ext_resource type="AudioStream" uid="uid://b7f2ufpdpaymy" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_summon01.ogg" id="68_nj3bu"]
[ext_resource type="AudioStream" uid="uid://dftjtxaaej67m" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_summon02.ogg" id="69_ih33d"]
[ext_resource type="AudioStream" uid="uid://beqhjj3ardpsr" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_summon03.ogg" id="70_oi1xk"]
[ext_resource type="AudioStream" uid="uid://c23laum2lisww" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_summon04.ogg" id="71_w7x51"]
[ext_resource type="AudioStream" uid="uid://c6e6bc7trd7tv" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_cutscene_laugh.ogg" id="72_os6k3"]
[ext_resource type="AudioStream" uid="uid://cn423207vveix" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_cutscene_question.ogg" id="73_gt6os"]
[ext_resource type="AudioStream" uid="uid://bry280uwdlr61" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_cutscene_battlestart.ogg" id="74_7f1wy"]
[ext_resource type="AudioStream" uid="uid://bibcodqnjrq4c" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_cutscene_chat01.ogg" id="75_e20ma"]
[ext_resource type="AudioStream" uid="uid://dtbofm003wh4" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_vox_cutscene_chat02.ogg" id="76_wurt2"]
[ext_resource type="AudioStream" uid="uid://c0a73mse2mj71" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_inhale.ogg" id="77_pccxe"]
[ext_resource type="AudioStream" uid="uid://bosgci1c0qjhv" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_roar.ogg" id="78_qs0s6"]
[ext_resource type="AudioStream" uid="uid://ilgxbhud12lo" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_spit.ogg" id="79_4fea0"]
[ext_resource type="AudioStream" uid="uid://dktcjmrr7nxue" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_hurt01.ogg" id="80_a4tiu"]
[ext_resource type="AudioStream" uid="uid://cpxqgx6xtq2cp" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_hurt02.ogg" id="81_f3kx1"]
[ext_resource type="AudioStream" uid="uid://c5l6vwidgpb5s" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_summon01.ogg" id="82_2hsi4"]
[ext_resource type="AudioStream" uid="uid://b5tw011cbi708" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_summon02.ogg" id="83_ulf8d"]
[ext_resource type="AudioStream" uid="uid://dxlo5qmcgonvm" path="res://sfx/characters/bosses/monstequare/sfx_monstequare_death.ogg" id="84_wqka5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5oho2"]
shader = ExtResource("1_doxw5")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_6cdjg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8pbfb")
}, {
"duration": 1.0,
"texture": ExtResource("3_wh2ps")
}, {
"duration": 1.0,
"texture": ExtResource("4_5168v")
}, {
"duration": 1.0,
"texture": ExtResource("5_4p4i1")
}, {
"duration": 1.0,
"texture": ExtResource("6_xj6r5")
}, {
"duration": 1.0,
"texture": ExtResource("7_3rvpt")
}],
"loop": false,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_i5vbi")
}, {
"duration": 1.0,
"texture": ExtResource("9_sqgjl")
}, {
"duration": 1.0,
"texture": ExtResource("10_5ub5i")
}, {
"duration": 1.0,
"texture": ExtResource("11_gi8tq")
}, {
"duration": 1.0,
"texture": ExtResource("12_ksqet")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0oec")
}],
"loop": false,
"name": &"death",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_ksqet")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0oec")
}, {
"duration": 1.0,
"texture": ExtResource("12_ksqet")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0oec")
}, {
"duration": 1.0,
"texture": ExtResource("12_ksqet")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0oec")
}, {
"duration": 1.0,
"texture": ExtResource("12_ksqet")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0oec")
}, {
"duration": 1.0,
"texture": ExtResource("12_ksqet")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0oec")
}, {
"duration": 1.0,
"texture": ExtResource("12_ksqet")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0oec")
}],
"loop": true,
"name": &"death_loop",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_5k0kk")
}, {
"duration": 1.0,
"texture": ExtResource("15_j58g7")
}, {
"duration": 1.0,
"texture": ExtResource("16_4oxgr")
}, {
"duration": 1.0,
"texture": ExtResource("17_53k2s")
}, {
"duration": 1.0,
"texture": ExtResource("18_4b3mp")
}, {
"duration": 1.0,
"texture": ExtResource("19_b3tnw")
}],
"loop": true,
"name": &"idle",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_ffycw")
}, {
"duration": 1.0,
"texture": ExtResource("23_yargb")
}, {
"duration": 1.0,
"texture": ExtResource("24_0223a")
}, {
"duration": 1.0,
"texture": ExtResource("25_5waan")
}, {
"duration": 1.0,
"texture": ExtResource("26_ib8l1")
}, {
"duration": 1.0,
"texture": ExtResource("25_5waan")
}, {
"duration": 1.0,
"texture": ExtResource("26_ib8l1")
}, {
"duration": 1.0,
"texture": ExtResource("25_5waan")
}, {
"duration": 1.0,
"texture": ExtResource("26_ib8l1")
}, {
"duration": 1.0,
"texture": ExtResource("25_5waan")
}, {
"duration": 1.0,
"texture": ExtResource("26_ib8l1")
}, {
"duration": 1.0,
"texture": ExtResource("25_5waan")
}, {
"duration": 1.0,
"texture": ExtResource("26_ib8l1")
}, {
"duration": 1.0,
"texture": ExtResource("27_e5mub")
}, {
"duration": 1.0,
"texture": ExtResource("28_fnpub")
}, {
"duration": 1.0,
"texture": ExtResource("29_d4njs")
}, {
"duration": 1.0,
"texture": ExtResource("30_t427i")
}, {
"duration": 1.0,
"texture": ExtResource("31_lnob0")
}, {
"duration": 1.0,
"texture": ExtResource("32_hxlok")
}, {
"duration": 1.0,
"texture": ExtResource("33_lqudp")
}, {
"duration": 1.0,
"texture": ExtResource("34_m4hr6")
}],
"loop": false,
"name": &"intro_roar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_sfkx2")
}, {
"duration": 1.0,
"texture": ExtResource("36_608lq")
}, {
"duration": 1.0,
"texture": ExtResource("37_32w0g")
}, {
"duration": 1.0,
"texture": ExtResource("38_jdf2o")
}, {
"duration": 1.0,
"texture": ExtResource("39_3gy1j")
}, {
"duration": 1.0,
"texture": ExtResource("40_rnn4j")
}, {
"duration": 1.0,
"texture": ExtResource("41_heo7o")
}, {
"duration": 1.0,
"texture": ExtResource("42_1figf")
}, {
"duration": 1.0,
"texture": ExtResource("43_d8dob")
}],
"loop": false,
"name": &"intro_start",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("44_q2f2c")
}, {
"duration": 1.0,
"texture": ExtResource("45_21vk7")
}, {
"duration": 1.0,
"texture": ExtResource("46_5j8qb")
}, {
"duration": 1.0,
"texture": ExtResource("47_440dt")
}, {
"duration": 1.0,
"texture": ExtResource("48_xpx07")
}, {
"duration": 1.0,
"texture": ExtResource("49_uk3qh")
}],
"loop": false,
"name": &"spit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("50_bi6be")
}, {
"duration": 1.0,
"texture": ExtResource("51_y8jwi")
}, {
"duration": 1.0,
"texture": ExtResource("52_utlk8")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("53_do7h3")
}, {
"duration": 1.0,
"texture": ExtResource("54_ujgaf")
}, {
"duration": 1.0,
"texture": ExtResource("55_tpp7c")
}, {
"duration": 1.0,
"texture": ExtResource("50_bi6be")
}],
"loop": false,
"name": &"summon",
"speed": 10.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vfb8u"]
streams_count = 2
stream_0/stream = ExtResource("56_wxjg3")
stream_1/stream = ExtResource("57_65yxa")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_e2odl"]
streams_count = 4
stream_0/stream = ExtResource("58_uv7sg")
stream_1/stream = ExtResource("59_isf41")
stream_2/stream = ExtResource("60_n0opc")
stream_3/stream = ExtResource("61_qcdls")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_limmo"]
streams_count = 4
stream_0/stream = ExtResource("64_5wt8i")
stream_1/stream = ExtResource("65_breto")
stream_2/stream = ExtResource("66_0omcv")
stream_3/stream = ExtResource("67_f86al")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_56xte"]
streams_count = 4
stream_0/stream = ExtResource("68_nj3bu")
stream_1/stream = ExtResource("69_ih33d")
stream_2/stream = ExtResource("70_oi1xk")
stream_3/stream = ExtResource("71_w7x51")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sw2ox"]
streams_count = 2
stream_0/stream = ExtResource("80_a4tiu")
stream_1/stream = ExtResource("81_f3kx1")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7rinc"]
streams_count = 2
stream_0/stream = ExtResource("82_2hsi4")
stream_1/stream = ExtResource("83_ulf8d")

[node name="Monstequare_Cutscene" type="Node2D"]
script = ExtResource("1_1i01l")

[node name="MonstequareSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_5oho2")
sprite_frames = SubResource("SpriteFrames_6cdjg")
animation = &"intro_roar"
autoplay = "idle"

[node name="Voices" type="Node2D" parent="."]

[node name="DefeatedVox" type="AudioStreamPlayer2D" parent="Voices"]
stream = SubResource("AudioStreamRandomizer_vfb8u")
volume_db = 8.0
bus = &"voices"

[node name="DamageVox" type="AudioStreamPlayer2D" parent="Voices"]
stream = SubResource("AudioStreamRandomizer_e2odl")
volume_db = 8.0
bus = &"voices"

[node name="IntroStartVox" type="AudioStreamPlayer2D" parent="Voices"]
stream = ExtResource("62_adq7w")
volume_db = 8.0
bus = &"voices"

[node name="IntroRoarVox" type="AudioStreamPlayer2D" parent="Voices"]
stream = ExtResource("63_sy4tm")
volume_db = 8.0
bus = &"voices"

[node name="SpitVox" type="AudioStreamPlayer2D" parent="Voices"]
stream = SubResource("AudioStreamRandomizer_limmo")
volume_db = 8.0
bus = &"voices"

[node name="SummonVox" type="AudioStreamPlayer2D" parent="Voices"]
stream = SubResource("AudioStreamRandomizer_56xte")
volume_db = 8.0
bus = &"voices"

[node name="Cutscene_Laugh" type="AudioStreamPlayer2D" parent="Voices"]
stream = ExtResource("72_os6k3")
volume_db = 8.0
bus = &"voices"

[node name="Cutscene_Question" type="AudioStreamPlayer2D" parent="Voices"]
stream = ExtResource("73_gt6os")
volume_db = 8.0
bus = &"voices"

[node name="Cutscene_BattleStart" type="AudioStreamPlayer2D" parent="Voices"]
stream = ExtResource("74_7f1wy")
volume_db = 12.0
bus = &"voices"

[node name="Cutscene_Chat01" type="AudioStreamPlayer2D" parent="Voices"]
stream = ExtResource("75_e20ma")
volume_db = 8.0
bus = &"voices"

[node name="Cutscene_Chat02" type="AudioStreamPlayer2D" parent="Voices"]
stream = ExtResource("76_wurt2")
volume_db = 12.0
bus = &"voices"

[node name="SFX" type="Node2D" parent="."]

[node name="IntroStartSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("77_pccxe")
volume_db = 5.0
bus = &"sfx"

[node name="IntroRoarSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("78_qs0s6")
volume_db = 5.0
bus = &"sfx"

[node name="SpitSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("79_4fea0")
volume_db = 5.0
bus = &"sfx"

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_sw2ox")
volume_db = 5.0
bus = &"sfx"

[node name="SummonSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_7rinc")
volume_db = 5.0
bus = &"sfx"

[node name="DefeatedSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("84_wqka5")
volume_db = 5.0
bus = &"sfx"

[node name="DialougeStartTime" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="frame_changed" from="MonstequareSprite" to="." method="_on_monstequare_sprite_frame_changed"]
[connection signal="timeout" from="DialougeStartTime" to="." method="_on_dialouge_start_time_timeout"]
